--- a/estilos.css
+++ b/estilos.css
@@ -10,6 +10,151 @@ body{
 	font-size: 17px;
 }
 
+.centrado{
+	height: 100%;
+	background-color: #717784;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+
+.lds-roller {
+	display: inline-block;
+	position: relative;
+	width: 80px;
+	height: 80px;
+  }
+  .lds-roller div {
+	animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+	transform-origin: 40px 40px;
+  }
+  .lds-roller div:after {
+	content: " ";
+	display: block;
+	position: absolute;
+	width: 7px;
+	height: 7px;
+	border-radius: 50%;
+	background: #fff;
+	margin: -4px 0 0 -4px;
+  }
+  .lds-roller div:nth-child(1) {
+	animation-delay: -0.036s;
+  }
+  .lds-roller div:nth-child(1):after {
+	top: 63px;
+	left: 63px;
+  }
+  .lds-roller div:nth-child(2) {
+	animation-delay: -0.072s;
+  }
+  .lds-roller div:nth-child(2):after {
+	top: 68px;
+	left: 56px;
+  }
+  .lds-roller div:nth-child(3) {
+	animation-delay: -0.108s;
+  }
+  .lds-roller div:nth-child(3):after {
+	top: 71px;
+	left: 48px;
+  }
+  .lds-roller div:nth-child(4) {
+	animation-delay: -0.144s;
+  }
+  .lds-roller div:nth-child(4):after {
+	top: 72px;
+	left: 40px;
+  }
+  .lds-roller div:nth-child(5) {
+	animation-delay: -0.18s;
+  }
+  .lds-roller div:nth-child(5):after {
+	top: 71px;
+	left: 32px;
+  }
+  .lds-roller div:nth-child(6) {
+	animation-delay: -0.216s;
+  }
+  .lds-roller div:nth-child(6):after {
+	top: 68px;
+	left: 24px;
+  }
+  .lds-roller div:nth-child(7) {
+	animation-delay: -0.252s;
+  }
+  .lds-roller div:nth-child(7):after {
+	top: 63px;
+	left: 17px;
+  }
+  .lds-roller div:nth-child(8) {
+	animation-delay: -0.288s;
+  }
+  .lds-roller div:nth-child(8):after {
+	top: 56px;
+	left: 12px;
+  }
+  @keyframes lds-roller {
+	0% {
+	  transform: rotate(0deg);
+	}
+	100% {
+	  transform: rotate(360deg);
+	}
+  }
+
+.msg-container{
+	opacity: 0;
+	visibility: hidden;
+	position: fixed;
+	z-index: 1000;
+	width: 100%;
+	height: 100vh;
+	top: 0;
+	left: 0;
+	background: rgba(0,0,0,0.5);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.msg{
+	width: 40%;
+	height: 50%;
+	background: #fff;
+	text-align: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	position: relative;
+	transition: transform 1s;
+	transform: translateY(0%);
+	border-radius: 10px;
+}
+
+.close{
+	position: absolute;
+	top: 5px;
+	right: 5px;
+	display: inline-block;
+	width: 25px;
+	height: 25px;
+	background: #c44a4a;
+	color: #fff;
+	line-height: 25px;
+	cursor: pointer;
+	border-radius: 50%;
+}
+
+.msg-close{
+	transform: translateY(-200%);
+}
+
+.msg >img{
+	height: 50%;
+}
+  
 .contenedor{
 	width: 85%;
 	max-width: 1000px;
@@ -88,7 +233,7 @@ body{
 	border-radius: 5px;
 	padding: 5px 10px;
 	font-size: 16px;
-	margin-bottom: 15px;
+	margin-bottom: 40px;
 }
 .trabajos .formulario .prioridad{
 	border-radius: 5px;
@@ -116,7 +261,7 @@ body{
 	border:none;
 	color: #fff;
 	font-size: 18px;
-	background: #BC104C;
+	background: #8F1450;
 	border-radius: 3px;
 	cursor: pointer;
 	text-align: center;
@@ -130,7 +275,7 @@ body{
 }
 
 .trabajos .btn:hover{
-	background: #ED3173;
+	background: #B31963;
 }
 
 .trabajos .imagen{
@@ -180,6 +325,12 @@ body{
 .trabajos .formulario .boton:hover{
 	background: #570F3A;
 }
+
+@media screen and (max-width: 700px){
+	.trabajos{
+		text-align: center;
+		width: 500px;
+	}
 
 @media screen and (max-width: 600px){
 	.trabajos{
